# meetSam

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml
cpp/: CMakeLists.txt  PKGBUILD  meetSam.cpp
docs/source/: clearance.rst  conf.py  education.rst  experience.rst  index.rst  meetSam.rst  skills.rst  usage.rst
src/meetSam/: card_back.py  card_front.py  meet_sam.py
