cmake_minimum_required(VERSION 3.30)
project(meetSam LANGUAGES CXX VERSION 0.0.3)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${CMAKE_PROJECT_NAME} meetSam.cpp)
install(TARGETS ${CMAKE_PROJECT_NAME} RUNTIME DESTINATION bin)

set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Samuel Mehalko")

include(CPack)
