cmake_minimum_required(VERSION 3.30)
project(meetSam LANGUAGES CXX VERSION 0.0.4)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${CMAKE_PROJECT_NAME} meetSam.cpp)
install(TARGETS ${CMAKE_PROJECT_NAME} RUNTIME DESTINATION bin)

set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
set(CPACK_PACKAGE_VENDOR "Sam Mehalko")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A resume/website thing.")
set(CPACK_PACKAGE_CONTACT "samuel.mehalko@ngc.com")
set(CPACK_PACKAGE_VERSION ${CMAKE_PROJECT_VERSION})

set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Sam Mehalko")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libstdc++ (>= 14)")

set(CPACK_RPM_PACKAGE_LICENSE "MIT")
set(CPACK_RPM_PACKAGE_GROUP "Applications/Utilities")
set(CPACK_RPM_PACKAGE_RELEASE 1)
set(CPACK_RPM_PACKAGE_REQUIRES "glibc")

include(CPack)
